[package]
name = "home-temperature-statusbar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
inquire = "0.6.2"
keyring = "2.3.2"
log = "0.4.20"
nerd_fonts = "0.1.9"
pretty_env_logger = "0.5.0"
tapo = "0.7.9"
tokio = { version = "1.36.0", features = ["full"] }
