[package]
name = "t31x-mon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
inquire = "0.7.5"
keyring = "3.6.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
tapo = "0.8.0"
tokio = { version = "1.41.1", features = ["full"] }
